sample-nautilus-desktop-gui/desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: INITIALS-desktop # Change this to your initials
spec:
  replicas: 1
  selector:
    matchLabels:
      app: INITIALS # Change this to your initials
  template:
    metadata:
      labels:
        app: INITIALS # Change this to your initials
    spec:
      hostname: egl
      containers:
      - name: egl
        image: ghcr.io/selkies-project/nvidia-egl-desktop:22.04-20240425164112
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 32Gi
            cpu: "16"
            nvidia.com/gpu: 1
          requests:
            memory: 8Gi
            cpu: "4"
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: egl-cache-vol
        - mountPath: /home/user/persistent
          name: egl-root-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: egl-cache-vol
        persistentVolumeClaim:
          claimName: INITIALS-carla-cache # Change this to your initials
      - name: egl-root-vol
        persistentVolumeClaim:
          claimName: INITIALS-carla # Change this to your initials
